@@ -1,6 +1,12 @@
 kbd-chooser (1.19) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Stop writing to debootstrap_settings, dropping woody installation support.
+
+  [ Colin Watson ]
+  * If a keymap list entry has the same keymap name as a previous one but a
+    different language list, create a new keymap for it. This is required to
+    select the correct default for Croatian (closes: Ubuntu #14711).
 
  -- Joey Hess <joeyh@debian.org>  Mon,  8 Aug 2005 15:20:41 -0400
 
